cloud/local/development/webdav/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webdav
  labels:
    name: webdav
