cloud/local/development/webdav/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdav-deployment
  namespace: webdav
  labels:
    app: webdav-server
spec:
  selector:
    matchLabels:
      app: webdav-server
  template:
    metadata:
      labels:
        app: webdav-server
    spec:
      containers:
        - name: webdav-container
          image: ghcr.io/vrtexe/webdav:v4.3.3
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: webdav-data-volume
              mountPath: "/data"
      volumes:
        - name: webdav-data-volume
          persistentVolumeClaim:
            claimName: webdav-data-pvc
