cloud/local/development/webdav/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: webdav-service
  namespace: webdav
spec:
  selector:
    app: webdav-server
  ports:
    - port: 80
      targetPort: 8080
