cloud/local/development/webdav/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webdav-ingres
  namespace: webdav
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /webdav(/|$)(.*)
            backend:
              service:
                name: webdav-service
                port:
                  number: 80
